--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.10",
+    "classnames": "^2.3.1",
     "firebase": "^8.6.8",
-    "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
